syntax = "proto3";

package crenjoy.protobuf;

option java_package = "crenjoy.protobuf";
option java_outer_classname = "BasicGoogleProto";
option java_multiple_files = true;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";


// Basic Google Proto.
message GoogleTestMessage {
    google.protobuf.Timestamp test_local_date_time = 1;
    google.protobuf.Timestamp test_local_date = 2;
    google.protobuf.Timestamp test_local_time = 3;
    google.protobuf.Timestamp test_instant = 4;
    google.protobuf.Duration  test_duration = 5;
    google.protobuf.Timestamp test_offset_date_time = 6;
    google.protobuf.Timestamp test_offset_time = 7;
    google.protobuf.Timestamp test_zoned_date_time = 8;
}